--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,7 +2,7 @@ project:
   type: website
 
 website:
-  title: "Yves Barmaz"
+  title: "Yves Barmaz's blog"
   navbar:
     right:
       - about.qmd
